--- a/style/accueil.css
+++ b/style/accueil.css
@@ -183,6 +183,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+          padding-bottom: 110px;
 }
 
 section > div {
