--- a/style/chic.css
+++ b/style/chic.css
@@ -468,6 +468,11 @@ footer {
     font-size: 1em;
   }
 }
+@media (min-width: 360px) and ( max-width: 768px){
+  footer{
+  font-size: 1.7em;
+}
+}
 footer .btn a {
   font-size: 1.4em;
   cursor: pointer;
