--- a/style/accueil.css
+++ b/style/accueil.css
@@ -408,6 +408,11 @@ footer {
     display: fixed;
   }
 }
+@media (min-width: 360px) and ( max-width: 768px){
+  footer{
+  font-size: 1.7em;
+}
+}
 footer .btn a {
   font-size: 1.4em;
   cursor: pointer;
