--- a/style/mentionslegales.css
+++ b/style/mentionslegales.css
@@ -3,21 +3,21 @@ html, body {
   padding: 0;
   margin: 0;
 }
-h1{ 
-    background-color:  #20B2AA;   
-    width: 100%;
-    height: 120px;  
-    margin: auto;
-    font-size: 4em;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    padding-top: 20px;
-   
-    }
-h1 a {
+header {
+  color: #fdcb46;
+  background-color: #549c84;
+  width: 100%;
+  height: 100px;
+  margin: auto;
+  font-size: 4em;
+  text-align: center;
+  padding-top: 0px;
+  font-family: Roboto, "sans-serif";
+}
+header a {
   text-decoration: none;
   cursor: pointer;
-  color: #FFD600;
+  color: #fdcb46;
 }
 
 .container {
@@ -46,17 +46,21 @@ h1 a {
   text-align: center;
 
  }
-#footer {
-  height: 100px;
-  width: 60%;
-  background-color: #20B2AA;
-  position: fixed;
-  bottom: 0;
-}
-@media (max-width: 768px) {
-    #footer{
-    width: 100%;
-  }  
-
+footer{
+    height: 70px;
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    font-family: 'kalam';
+    background-color: $bgheader;
+    @media (max-width: 786px) {
+        width: 100%;
+        font-size: 1em;
+        display: fixed;
+    }
 }  
 /*# sourceMappingURL=style2.css.map */
