Changement background du menu  delice

--- a/style/delice.css
+++ b/style/delice.css
@@ -191,7 +191,7 @@ h1 {
 section {
   font-family: "Spectral", serif;
   padding-bottom: 140px;
-  background: #f9f9f9;
+  background: #edefef;
 }
 
 h2 {
