--- a/style/mentionslegales.css
+++ b/style/mentionslegales.css
@@ -46,21 +46,24 @@ header a {
   text-align: center;
 
  }
-footer{
-    height: 70px;
-    width: 60%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    position: fixed;
-    bottom: 0;
-    font-family: 'kalam';
-    background-color: $bgheader;
-    @media (max-width: 786px) {
-        width: 100%;
-        font-size: 1em;
-        display: fixed;
-    }
-}  
+footer {
+  height: 70px;
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  bottom: 0;
+  font-family: "kalam";
+  background-color: #549c84;
+}
 /*# sourceMappingURL=style2.css.map */
