--- a/style/accueil.scss
+++ b/style/accueil.scss
@@ -15,6 +15,9 @@ section{
     align-items: center;
     padding-bottom: 80px;
 }
+h1{
+    font-size: 1.3em;
+}
 section > div {        
     flex-wrap: wrap;    
     justify-content: space-around;
